--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
+@import url("./loginPage.css");
+@import url("./reset.css");
+@import url("./bg-color.css");
+@import url("./textType.css");
+@import url("./btn.css");
+
 html,
 body {
   padding: 0;
