--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,11 @@
 @import url("./bg-color.css");
 @import url("./textType.css");
 @import url("./btn.css");
+@import url("./header.css");
+@import url("./footer.css");
+@import url("./sidebar.css");
+@import url("./balance.css");
+@import url("./statistic.css");
 
 html,
 body {
@@ -10,6 +15,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #fafcff !important;
 }
 
 a {
@@ -19,4 +25,20 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.row {
+  margin: 0px !important;
+}
+
+.rp {
+  padding: 0px !important;
+}
+
+.rpr {
+  padding-right: 0px !important;
+}
+
+.rm {
+  margin: 0px !important;
 }
