--- a/styles/textType.css
+++ b/styles/textType.css
@@ -5,13 +5,34 @@
 }
 
 /* SIZE */
+.fs-40 {
+  font-size: 40px;
+}
 .fs-24 {
   font-size: 24px;
+}
+.fs-18 {
+  font-size: 18px;
+}
+.fs-16 {
+  font-size: 16px;
+}
+.fs-14 {
+  font-size: 14px;
+}
+.fs-13 {
+  font-size: 13px;
 }
 
 /* WEIGHT */
 .fw-700 {
   font-weight: 700;
+}
+.fw-600 {
+  font-weight: 600;
+}
+.fw-400 {
+  font-weight: 400;
 }
 
 .color-white {
