add : redux-persist, transferpage

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@
 @import url("./sidebar.css");
 @import url("./balance.css");
 @import url("./statistic.css");
+@import url("./transfer.css");
 
 html,
 body {
