--- a/styles/bg-color.css
+++ b/styles/bg-color.css
@@ -1,3 +1,17 @@
 .bgc-primary {
   background-color: #6379f4;
 }
+
+.bg-gray1 {
+  background-color: rgba(58, 61, 66, 0.1);
+}
+
+.sec-card {
+  background-color: white !important;
+  box-shadow: 0px 4px 20px 0px #0000000d;
+  border-radius: 20px;
+}
+
+.rds-20 {
+  border-radius: 20px;
+}
