--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-radius: 20px;
   box-shadow: 0px 4px 20px 0px #0000000d;
-
+  height: 678px;
   /* box-shadow: 0px 2px 40px #000000; */
 }
 
