--- a/styles/statistic.css
+++ b/styles/statistic.css
@@ -20,10 +20,17 @@
   padding-right: 0px !important;
 }
 
+.history-list__image-user img {
+  object-fit: cover;
+  height: 56px;
+  width: 56px;
+  border-radius: 10px;
+}
+
 .history-list__image-user {
   width: 56px;
   height: 56px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   border-radius: 10px;
 }
 
@@ -36,4 +43,10 @@
   border-radius: 20px;
   box-shadow: 0px 4px 20px 0px #0000000d;
   height: 100%;
+}
+
+.history-filter {
+  background-color: rgba(58, 61, 66, 0.1);
+  border-radius: 12px;
+  border: none;
 }
