--- a/styles/loginPage.css
+++ b/styles/loginPage.css
@@ -27,12 +27,6 @@
   line-height: 33px;
 }
 
-input:focus,
-textarea:focus {
-  outline: none;
-  box-shadow: none;
-}
-
 .input-pin {
   display: flex;
   justify-content: space-between;
@@ -43,4 +37,24 @@ textarea:focus {
   height: 65px;
   border-radius: 4px;
   border: 1px solid #a9a9a999;
+}
+
+input {
+  outline: none !important;
+}
+
+.login-input {
+  background-color: #fafcff !important;
+}
+
+.form-control {
+  outline: none !important;
+}
+
+.check {
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  color: #1ec15f;
+  background-color: #1ec15f;
 }
