--- a/styles/textType.css
+++ b/styles/textType.css
@@ -11,8 +11,14 @@
 .fs-40 {
   font-size: 40px;
 }
+.fs-30 {
+  font-size: 30px;
+}
 .fs-24 {
   font-size: 24px;
+}
+.fs-22 {
+  font-size: 22px;
 }
 .fs-18 {
   font-size: 18px;
@@ -37,6 +43,9 @@
 .fw-400 {
   font-weight: 400;
 }
+.lh-35 {
+  line-height: 35px;
+}
 
 .lh-28 {
   line-height: 28px;
@@ -52,6 +61,14 @@
 
 .color-gray86 {
   color: #7a7886;
+}
+
+.color-gray5b {
+  color: #514f5b;
+}
+
+.color-gray99 {
+  color: #3a3d4299;
 }
 
 .color-green {
