--- a/styles/bg-color.css
+++ b/styles/bg-color.css
@@ -2,6 +2,10 @@
   background-color: #6379f4;
 }
 
+.bg-8ed {
+  background-color: #e5e8ed;
+}
+
 .bg-gray1 {
   background-color: rgba(58, 61, 66, 0.1);
 }
@@ -18,4 +22,12 @@
 
 .rds-12 {
   border-radius: 12px !important;
+}
+
+.rds-10 {
+  border-radius: 10px !important;
+}
+
+.rotate90 {
+  transform: rotate(90deg);
 }
