--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,8 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+select {
+  appearance: none;
+  text-align: center;
+}
