--- a/styles/loginPage.css
+++ b/styles/loginPage.css
@@ -58,3 +58,10 @@ input {
   color: #1ec15f;
   background-color: #1ec15f;
 }
+
+.input-gray {
+  width: 100%;
+  /* height: 65px; */
+  border-radius: 12px;
+  border: 1px solid #a9a9a999;
+}
