--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -7,6 +7,15 @@
   /* box-shadow: 0px 2px 40px #000000; */
 }
 
+.side-box-sm {
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: 0px 4px 20px 0px #0000000d;
+  /* height: 678px; */
+  /* min-height: 600px; */
+  /* box-shadow: 0px 2px 40px #000000; */
+}
+
 .side-content {
   height: 100%;
 }
