--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
 @import url("./transfer.css");
 @import url("./pagination.css");
 @import url("./profile.css");
+@import url("./landing.css");
 
 html,
 body {
